--- a/.github/workflows/Snowflake_CICD.yml
+++ b/.github/workflows/Snowflake_CICD.yml
@@ -15,15 +15,15 @@ jobs:
       - name: Retrieve repository
         uses: actions/checkout@v3
       
-      - name: Use Python 3.8.x
+      - name: Use Python 3.12.x
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8.x
+          python-version: 3.12.x
 
       - name: Install SnowSQL
         run: |
-          curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_x86_64/snowsql-1.2.9-linux_x86_64.bash
-          SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.2.9-linux_x86_64.bash
+          curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.3/linux_x86_64/snowsql-1.3.0-linux_x86_64.bash
+          SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.3.0-linux_x86_64.bash
         
       - name: Deploy to DEV
         env:
@@ -60,17 +60,17 @@ jobs:
       - name: Retrieve repository
         uses: actions/checkout@v3
       
-      - name: Use Python 3.8.x
+      - name: Use Python 3.12.x
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8.x
+          python-version: 3.12.x
 
       - name: Install SnowSQL
         run: |
-          curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_x86_64/snowsql-1.2.9-linux_x86_64.bash
-          SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.2.9-linux_x86_64.bash
+          curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.3/linux_x86_64/snowsql-1.3.0-linux_x86_64.bash
+          SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.3.0-linux_x86_64.bash
         
-      - name: Deploy to DEV
+      - name: Deploy to QUT
         env:
           
           SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
