--- a/.github/workflows/Snowflake_CICD.yml
+++ b/.github/workflows/Snowflake_CICD.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.3/linux_x86_64/snowsql-1.3.0-linux_x86_64.bash
           SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.3.0-linux_x86_64.bash
-        
+          echo "${{ github.event.repository.name }}"
       - name: Deploy to DEV
         env:
           
@@ -53,7 +53,7 @@ jobs:
           done
 
   deploy_qut:
-    if: github.ref == 'refs/heads/main'  # Change this to manually trigger or depend on dev job
+    if: github.ref == 'refs/heads/main' && github.event.repository.name == 'RepoProject1'  # Change this to manually trigger or depend on dev job
     runs-on: ubuntu-latest
     environment: qut
     steps:
