--- a/.github/workflows/Snowflake_CICD.yml
+++ b/.github/workflows/Snowflake_CICD.yml
@@ -42,8 +42,7 @@ jobs:
           for dir in "$GITHUB_WORKSPACE/objects"/*/; do
               subdir=$(basename "$dir")
               echo "Found project subdirectory: $subdir"
-
-              if [[ "${{ env.target_project }}" == "project1" ]] || [[ -z "${{ env.target_project }}" ]];
+              if [[ "${{ env.TARGET_PROJECT }}" == "$subdir" ]] || [[ -z "${{ env.TARGET_PROJECT }}" ]];
                 ddl_project_change_history_query=$(cat "$GITHUB_WORKSPACE/objects/ddl_project_change_history.sql" | sed "s/{PROJECT}/$subdir/g")
                 echo "$ddl_project_change_history_query"
                 ~/bin/snowsql -q "$ddl_project_change_history_query"
