--- a/.github/workflows/Snowflake_CICD.yml
+++ b/.github/workflows/Snowflake_CICD.yml
@@ -17,14 +17,15 @@ jobs:
       - name: Set Job Name
         run: |
           if [[ "${{ github.ref }}" == "refs/heads/dev" ]]; then
-            echo "::set-env name=JOB_NAME::dev"
+            echo "JOB_NAME=dev" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/main" && "${{ github.event.repository.name }}" != "RepoED"]]; then
-            echo "::set-env name=JOB_NAME::qut"
+            echo "JOB_NAME=qut" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/qut" && "${{ github.event.repository.name }}" == "RepoED"]]; then
-            echo "::set-env name=JOB_NAME::qut"
+            echo "JOB_NAME=qut" >> $GITHUB_ENV
           elif [[ "${{ github.ref }}" == "refs/heads/main" && "${{ github.event.repository.name }}" == "RepoED"]]; then
-            echo "::set-env name=JOB_NAME::prd"
+            echo "JOB_NAME=prd" >> $GITHUB_ENV
           else
+            echo "JOB_NAME=default" >> $GITHUB_ENV
             echo "Job failed due to unexpected job conditions!"
             exit 1
           fi
