--- a/.github/workflows/Snowflake_CICD.yml
+++ b/.github/workflows/Snowflake_CICD.yml
@@ -9,7 +9,8 @@ on:
   workflow_dispatch:   # Allow manual triggering of the workflow
 
 jobs:
-  deploy_${{ env.JOB_NAME }}::
+  deploy_dev:
+    name: ${{ env.JOB_NAME }}
     # if: github.ref == 'refs/heads/dev' 
     runs-on: ubuntu-latest
     environment: dev
