--- a/.github/workflows/Snowflake_CICD.yml
+++ b/.github/workflows/Snowflake_CICD.yml
@@ -30,12 +30,13 @@ jobs:
             echo "Job failed due to unexpected job conditions!"
             exit 1
           fi
+          
       - name: Retrieve Repository
         uses: actions/checkout@v3
-      - name: Use Python 3.10.x
+      - name: Use Python 3.8.x
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10.x
+          python-version: 3.8.x
       - name: Install SnowSQL
         run: |
           curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.3/linux_x86_64/snowsql-1.3.0-linux_x86_64.bash
@@ -51,7 +52,7 @@ jobs:
           TARGET_PROJECT: ${{ vars.TARGET_PROJECT }}
         run: |
           ~/bin/snowsql -f $GITHUB_WORKSPACE/objects/ddl_master_change_history.sql
-          pip install schemachange
+          pip install schemachange==3.6.1
           for dir in "$GITHUB_WORKSPACE/objects"/*/; do
               subdir=$(basename "$dir")
               echo "Found project subdirectory: $subdir"
