--- a/.github/workflows/Snowflake_CICD.yml
+++ b/.github/workflows/Snowflake_CICD.yml
@@ -51,7 +51,10 @@ jobs:
           SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
           TARGET_PROJECT: ${{ vars.TARGET_PROJECT }}
         run: |
-          ~/bin/snowsql -f $GITHUB_WORKSPACE/objects/ddl_master_change_history.sql
+          # ~/bin/snowsql -f $GITHUB_WORKSPACE/objects/ddl_master_change_history.sql
+          ddl_master_change_history_query=$(cat "$GITHUB_WORKSPACE/objects/ddl_master_change_history.sql" | sed "s/{TARGET_PROJECT}/$TARGET_PROJECT/g")
+          echo "$ddl_project_change_history_query"
+          ~/bin/snowsql -q "$ddl_project_change_history_query"        
           pip install schemachange==3.6.1
           for dir in "$GITHUB_WORKSPACE/objects"/*/; do
               subdir=$(basename "$dir")
@@ -69,6 +72,6 @@ jobs:
               elif [[ $TARGET_PROJECT == $subdir ]]; then
                 schemachange -f $GITHUB_WORKSPACE/objects/$subdir -a $SNOWSQL_ACCOUNT -u $SNOWSQL_USER -r $SNOWSQL_ROLE -w $SNOWSQL_WAREHOUSE -d $SNOWSQL_DATABASE -c $SNOWSQL_DATABASE.SCHEMACHANGE.CHANGE_HISTORY
               else
-                echo "Not target project!"
+                echo "Not the target project!"
               fi
           done
