--- a/.github/workflows/wf_call_sf_objects.yml
+++ b/.github/workflows/wf_call_sf_objects.yml
@@ -12,20 +12,20 @@ jobs:
   deploy_dev:
     if: github.ref == 'refs/heads/dev' 
     runs-on: ubuntu-latest
-    uses: ./.github/workflows/wf_sf_objects.yml
+    uses: ./wf_sf_objects.yml
     with:
       environment: dev
 
   deploy_qut:
     if: (github.ref == 'refs/heads/main' && github.event.repository.name != 'RepoED') || (github.ref == 'refs/heads/qut' && github.event.repository.name == 'RepoED')
-        runs-on: ubuntu-latest
-    uses: ./.github/workflows/wf_sf_objects.yml
+    runs-on: ubuntu-latest
+    uses: ./wf_sf_objects.yml
     with:
       environment: qut
 
   deploy_prd:
     if: github.ref == 'refs/heads/main' && github.event.repository.name == 'RepoED'
-        runs-on: ubuntu-latest
-    uses: ./.github/workflows/wf_sf_objects.yml
+    runs-on: ubuntu-latest
+    uses: ./wf_sf_objects.yml
     with:
       environment: prd
