--- a/.github/workflows/wf_call_sf_objects.yml
+++ b/.github/workflows/wf_call_sf_objects.yml
@@ -11,18 +11,18 @@ on:
 jobs:
   deploy_dev:
     if: github.ref == 'refs/heads/dev' 
-    uses: .github/workflows/wf_sf_objects.yml@main
+    uses: ./.github/workflows/wf_sf_objects.yml
     with:
       environment: dev
 
   deploy_qut:
     if: (github.ref == 'refs/heads/main' && github.event.repository.name != 'RepoED') || (github.ref == 'refs/heads/qut' && github.event.repository.name == 'RepoED')
-    uses: .github/workflows/wf_sf_objects.yml@main
+    uses: ./.github/workflows/wf_sf_objects.yml
     with:
       environment: qut
 
   deploy_prd:
     if: github.ref == 'refs/heads/main' && github.event.repository.name == 'RepoED'
-    uses: .github/workflows/wf_sf_objects.yml@main
+    uses: ./.github/workflows/wf_sf_objects.yml
     with:
       environment: prd
