--- a/.github/workflows/wf_sf_objects.yml
+++ b/.github/workflows/wf_sf_objects.yml
@@ -32,27 +32,32 @@ jobs:
           SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
           TARGET_PROJECT: ${{ vars.TARGET_PROJECT }}
         run: |
-          # ~/bin/snowsql -f $GITHUB_WORKSPACE/objects/ddl_master_change_history.sql
+          # create master change history table if not exists
           ddl_master_change_history_query=$(cat "$GITHUB_WORKSPACE/objects/ddl_master_change_history.sql" | sed "s/{TARGET_PROJECT}/$TARGET_PROJECT/g")
           echo "$ddl_master_change_history_query"
           ~/bin/snowsql -q "$ddl_master_change_history_query"        
           pip install schemachange==3.6.1
-          for dir in "$GITHUB_WORKSPACE/objects"/*/; do
+          if [[ -n $TARGET_PROJECT ]]; then
+            # if this job runs at project repo
+            # only run the target project subdirectory and skip the other subdirectories
+            echo "Target project is $TARGET_PROJECT!"
+            schemachange -f $GITHUB_WORKSPACE/objects/$TARGET_PROJECT -a $SNOWSQL_ACCOUNT -u $SNOWSQL_USER -r $SNOWSQL_ROLE -w $SNOWSQL_WAREHOUSE -d $SNOWSQL_DATABASE -c $SNOWSQL_DATABASE.SCHEMACHANGE.CHANGE_HISTORY
+          else
+            # if this job runs at ED repo
+            # loop through all subdirectories for all projects
+            for dir in "$GITHUB_WORKSPACE/objects"/*/; do
               subdir=$(basename "$dir")
               echo "Found project subdirectory: $subdir"
-              if [[ -z $TARGET_PROJECT ]]; then
-                ddl_project_change_history_query=$(cat "$GITHUB_WORKSPACE/objects/ddl_project_change_history.sql" | sed "s/{PROJECT}/$subdir/g")
-                echo "$ddl_project_change_history_query"
-                ~/bin/snowsql -q "$ddl_project_change_history_query"
-  
-                schemachange -f $GITHUB_WORKSPACE/objects/$subdir -a $SNOWSQL_ACCOUNT -u $SNOWSQL_USER -r $SNOWSQL_ROLE -w $SNOWSQL_WAREHOUSE -d $SNOWSQL_DATABASE -c $SNOWSQL_DATABASE.SCHEMACHANGE.CHANGE_HISTORY_$subdir 
-                
-                dml_change_history_query=$(cat "$GITHUB_WORKSPACE/objects/dml_change_history.sql" | sed "s/{PROJECT}/$subdir/g")
-                echo "$dml_change_history_query"
-                ~/bin/snowsql -q "$dml_change_history_query"
-              elif [[ $TARGET_PROJECT == $subdir ]]; then
-                schemachange -f $GITHUB_WORKSPACE/objects/$subdir -a $SNOWSQL_ACCOUNT -u $SNOWSQL_USER -r $SNOWSQL_ROLE -w $SNOWSQL_WAREHOUSE -d $SNOWSQL_DATABASE -c $SNOWSQL_DATABASE.SCHEMACHANGE.CHANGE_HISTORY
-              else
-                echo "Not the target project!"
-              fi
-          done
+              # create change history table for project if not exists
+              ddl_project_change_history_query=$(cat "$GITHUB_WORKSPACE/objects/ddl_project_change_history.sql" | sed "s/{PROJECT}/$subdir/g")
+              echo "$ddl_project_change_history_query"
+              ~/bin/snowsql -q "$ddl_project_change_history_query"
+              # run schemachange
+              schemachange -f $GITHUB_WORKSPACE/objects/$subdir -a $SNOWSQL_ACCOUNT -u $SNOWSQL_USER -r $SNOWSQL_ROLE -w $SNOWSQL_WAREHOUSE -d $SNOWSQL_DATABASE -c $SNOWSQL_DATABASE.SCHEMACHANGE.CHANGE_HISTORY_$subdir 
+              # merge project change history into master change history table
+              # finally drop project change history table
+              dml_change_history_query=$(cat "$GITHUB_WORKSPACE/objects/dml_change_history.sql" | sed "s/{PROJECT}/$subdir/g")
+              echo "$dml_change_history_query"
+              ~/bin/snowsql -q "$dml_change_history_query"
+            done
+          fi
