--- a/.github/workflows/wf_call_sf_objects.yml
+++ b/.github/workflows/wf_call_sf_objects.yml
@@ -1,11 +1,13 @@
 name: wf_call_sf_objects
 
 on:
-  # push:
-  #   branches:
-  #     - dev
-  #     - qut
-  #     - main
+  push:
+    branches:
+      - dev
+      - qut
+      - main
+    paths:
+      - objects/**
   workflow_dispatch:   # Allow manual triggering of the workflow
 
 jobs:
