--- a/.github/workflows/wf_call_sf_objects.yml
+++ b/.github/workflows/wf_call_sf_objects.yml
@@ -7,7 +7,7 @@ on:
       - qut
       - main
     paths:
-      - $TARGET_PATH
+      - objects/**
   workflow_dispatch:   # Allow manual triggering of the workflow
 
 jobs:
